# artsdatabanken-download

./: .copier-answers.yml  .gitignore  README.md  artsobservasjoner.py  pyproject.toml
examples/: bruno.json  observations.bru  taxon.bru
